# mandelbrot

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mandelbrot.cpp  mandelbrot.h  save_image.cpp  save_image.h  utils.cpp  utils.h  window.h
